# Nano-FII

./: .gitignore  AI_AGENT_INSTRUCTIONS.md  CHANGELOG.md  README.md  ROADMAP.md  build.zig  build.zig.zon  build_local.ps1  lib_tree.ini  nano_ffi.pyi  pyproject.toml  setup.py
.claude/: MEMORY.md  settings.json
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark.py  benchmark_vs_libraries.py
docs/: API.md
manuscript/: CLAUDE.md  build_docx.py  build_jot.py  generate_figures.py  manuscript.md  results.py
manuscript/Ingeniare/: Carvajal_Ingeniare_NanoFFI_manuscript.docx
manuscript/JOT/: Carvajal_JOT_NanoFFI.tex
manuscript/JUCS/: JUCSWordTemplateV5.docx  jucs2e.sty
manuscript/PeerJ_CS/: Carvajal_PeerJ_CS_NanoFFI_manuscript.docx
manuscript/SoftwareX/: Carvajal_SoftwareX_NanoFFI_manuscript.docx
scripts/: build_local.ps1
src/: allocator.zig  benchlib.zig  bridge.c  bridge.h  comptime_bridge.zig  python_ext.zig  registry.c  registry.h  registry.zig  root.zig  test_root.zig  version.zig
tests/: test_python.py
