[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-ffi"
version = "0.2.0"
description = "Minimalist high-speed Python-to-Zig FFI bridge via comptime trampolines."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ffi", "zig", "performance", "native", "extension"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Other",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/fcarvajalbrown/Nano-FII"
Issues   = "https://github.com/fcarvajalbrown/Nano-FII/issues"

[tool.setuptools]
packages = []

[tool.setuptools.data-files]
"." = ["nano_ffi*.pyd", "nano_ffi*.so"]